--- a/manager_users/templates/css/style.css
+++ b/manager_users/templates/css/style.css
@@ -61,3 +61,9 @@ input:focus{
     font-size: 0.7rem;
     margin: 0.3rem 1.4rem 0 0;
 }
+
+.error{
+    color: red;
+    font-size: 90%;
+    font-style: italic;
+}
